# dxvk

./: build-win32.txt  build-win64.txt  build-wine32.txt  build-wine64.txt  meson.build
src/: meson.build
src/d3d10/: meson.build
src/d3d11/: d3d11_context.cpp  d3d11_context.h  d3d11_context_imm.cpp  d3d11_context_imm.h  d3d11_device.cpp  d3d11_options.cpp  d3d11_options.h  d3d11_texture.cpp  meson.build
src/dxbc/: meson.build
src/dxgi/: dxgi_adapter.cpp  dxgi_options.cpp  dxgi_options.h  meson.build
src/dxvk/: dxvk_context.cpp  dxvk_instance.cpp  dxvk_openvr.cpp  dxvk_openvr.h  meson.build
src/dxvk_config/: dxvk_config.cpp  dxvk_config.def  dxvk_config.h  dxvk_config.spec  meson.build  version.rc
src/spirv/: meson.build
src/util/: meson.build
src/util/config/: config.cpp
